Python/Automatisering/Task scheduler/logs_for_email_links/Klima og energi - Okologisk tilstand vann.log

Errors:
  File "D:\Scripts\analyse\Telemark\Python\Queries/04_Klima_og_energi/Ressursforvaltning/okologisk_tilstand.py", line 545
    print(f"\nFinal pivoted DataFrame}:")
          ^
SyntaxError: f-string: single '}' is not allowed

ERROR conda.cli.main_run:execute(125): `conda run python D:\Scripts\analyse\Telemark\Python\Queries/04_Klima_og_energi/Ressursforvaltning/okologisk_tilstand.py` failed. (See above for error)
